--- a/ultralytics/cfg/models/v10-RGBT/yolov10n-RGBT-mid-to-late-fusion.yaml
+++ b/ultralytics/cfg/models/v10-RGBT/yolov10n-RGBT-mid-to-late-fusion.yaml
@@ -56,12 +56,17 @@ head:
   - [ [ -1, 18 ], 1, Concat, [ 1 ] ]  # cat backbone P3
   - [ -1, 3, C2f, [ 256 ] ]  # 34 (P3/8-small)
 
-  - [-1, 1, Conv, [256, 3, 2]]
-  - [[-1, 30], 1, Concat, [1]] # cat head P4
-  - [-1, 3, C2f, [512]] # 34 (P4/16-medium)
+  - [ [ 12, 25 ], 1, Concat, [ 1 ] ]  # cat head P5  35
+  - [ [ 25, 34 ], 1, Concat, [ 1 ] ]  # cat head P5  36
+  - [ [ 28, 34 ], 1, Concat, [ 1 ] ]  # cat head P5  37
+
+
+  - [37, 1, Conv, [256, 3, 2]]
+  - [[-1, 36], 1, Concat, [1]] # cat head P4
+  - [-1, 3, C2f, [512]] # 40 (P4/16-medium)
 
   - [-1, 1, SCDown, [512, 3, 2]]
-  - [[-1, 27], 1, Concat, [1]] # cat head P5
-  - [-1, 3, C2fCIB, [1024, True, True]] # 37 (P5/32-large)
+  - [[-1, 35], 1, Concat, [1]] # cat head P5
+  - [-1, 3, C2fCIB, [1024, True, True]] # 43 (P5/32-large)
 
-  - [[33, 36, 39], 1, v10Detect, [nc]] # Detect(P3, P4, P5)
+  - [[37, 40, 43], 1, v10Detect, [nc]] # Detect(P3, P4, P5)
