--- a/ultralytics/cfg/models/v6-RGBT/yolov6-latefusion.yaml
+++ b/ultralytics/cfg/models/v6-RGBT/yolov6-latefusion.yaml
@@ -20,7 +20,7 @@ ch: 4
 backbone:
   # [from, repeats, module, args]
   - [-1, 1, Silence, []]  # 0-P1/2
-  - [0, 1, SilenceChannel, [0,3]]  # 1-P1/2
+  - [0, 1, ChannelToNumber, []]  # 1-P1/2
   - [-1, 1, Conv, [64, 3, 2]] # 2-P1/2
   - [-1, 1, Conv, [128, 3, 2]] # 3-P2/4
   - [-1, 6, Conv, [128, 3, 1]]
