--- a/ultralytics/cfg/models/v6-RGBT/yolov6-latefusion.yaml
+++ b/ultralytics/cfg/models/v6-RGBT/yolov6-latefusion.yaml
@@ -20,7 +20,7 @@ ch: 4
 backbone:
   # [from, repeats, module, args]
   - [-1, 1, Silence, []]  # 0-P1/2
-  - [0, 1, ChannelToNumber, []]  # 1-P1/2
+  - [0, 1, SilenceChannel, [0,3]]  # 1-P1/
   - [-1, 1, Conv, [64, 3, 2]] # 2-P1/2
   - [-1, 1, Conv, [128, 3, 2]] # 3-P2/4
   - [-1, 6, Conv, [128, 3, 1]]
@@ -59,12 +59,12 @@ head:
   - [-1, 9, Conv, [128, 3, 1]] # 32
 
   - [-1, 1, Conv, [128, 3, 2]]
-  - [[-1, 30], 1, Concat, [1]] # cat head P4
+  - [[-1, 28], 1, Concat, [1]] # cat head P4
   - [-1, 1, Conv, [256, 3, 1]]
   - [-1, 9, Conv, [256, 3, 1]] # 36
 
   - [-1, 1, Conv, [256, 3, 2]]
-  - [[-1, 25], 1, Concat, [1]] # cat head P5
+  - [[-1, 23], 1, Concat, [1]] # cat head P5
   - [-1, 1, Conv, [512, 3, 1]]
   - [-1, 9, Conv, [512, 3, 1]] # 40
 
@@ -82,12 +82,12 @@ head:
   - [-1, 9, Conv, [128, 3, 1]] # 50
 
   - [-1, 1, Conv, [128, 3, 2]]
-  - [[-1, 43], 1, Concat, [1]] # cat head P4
+  - [[-1, 46], 1, Concat, [1]] # cat head P4
   - [-1, 1, Conv, [256, 3, 1]]
   - [-1, 9, Conv, [256, 3, 1]] # 54
 
   - [-1, 1, Conv, [256, 3, 2]]
-  - [[-1, 38], 1, Concat, [1]] # cat head P5
+  - [[-1, 41], 1, Concat, [1]] # cat head P5
   - [-1, 1, Conv, [512, 3, 1]]
   - [-1, 9, Conv, [512, 3, 1]] # 58
 
