--- a/ultralytics/cfg/models/rt-detr-RGBT/rtdetr-resnet50-RGBT-earlyfusion.yaml
+++ b/ultralytics/cfg/models/rt-detr-RGBT/rtdetr-resnet50-RGBT-earlyfusion.yaml
@@ -13,34 +13,36 @@ scales: # model compound scaling constants, i.e. 'model=yolov8n-cls.yaml' will c
 ch: 4
 backbone:
   # [from, repeats, module, args]
-  - [-1, 1, ResNetLayer, [3, 64, 1, True, 1]] # 0
-  - [-1, 1, ResNetLayer, [64, 64, 1, False, 3]] # 1
-  - [-1, 1, ResNetLayer, [256, 128, 2, False, 4]] # 2
-  - [-1, 1, ResNetLayer, [512, 256, 2, False, 6]] # 3
-  - [-1, 1, ResNetLayer, [1024, 512, 2, False, 3]] # 4
+  - [-1, 1, Silence, []]  # 0-P1/2
+  - [0, 1, SilenceChannel, [0,4]]  # 1-P1/2
+  - [-1, 1, ResNetLayer, [4, 64, 1, True, 1]] # 2
+  - [-1, 1, ResNetLayer, [64, 64, 1, False, 3]] # 3
+  - [-1, 1, ResNetLayer, [256, 128, 2, False, 4]] #4
+  - [-1, 1, ResNetLayer, [512, 256, 2, False, 6]] # 5
+  - [-1, 1, ResNetLayer, [1024, 512, 2, False, 3]] # 6
 
 head:
-  - [-1, 1, Conv, [256, 1, 1, None, 1, 1, False]] # 5
+  - [-1, 1, Conv, [256, 1, 1, None, 1, 1, False]] # 7
   - [-1, 1, AIFI, [1024, 8]]
-  - [-1, 1, Conv, [256, 1, 1]] # 7
+  - [-1, 1, Conv, [256, 1, 1]] # 9
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
-  - [3, 1, Conv, [256, 1, 1, None, 1, 1, False]] # 9
+  - [5, 1, Conv, [256, 1, 1, None, 1, 1, False]] # 11
   - [[-2, -1], 1, Concat, [1]]
-  - [-1, 3, RepC3, [256]] # 11
-  - [-1, 1, Conv, [256, 1, 1]] # 12
+  - [-1, 3, RepC3, [256]] # 13
+  - [-1, 1, Conv, [256, 1, 1]] # 14
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
-  - [2, 1, Conv, [256, 1, 1, None, 1, 1, False]] # 14
+  - [4, 1, Conv, [256, 1, 1, None, 1, 1, False]] # 16
   - [[-2, -1], 1, Concat, [1]] # cat backbone P4
-  - [-1, 3, RepC3, [256]] # X3 (16), fpn_blocks.1
+  - [-1, 3, RepC3, [256]] # X3 (18), fpn_blocks.1
 
-  - [-1, 1, Conv, [256, 3, 2]] # 17, downsample_convs.0
-  - [[-1, 12], 1, Concat, [1]] # cat Y4
-  - [-1, 3, RepC3, [256]] # F4 (19), pan_blocks.0
+  - [-1, 1, Conv, [256, 3, 2]] # 19, downsample_convs.0
+  - [[-1, 14], 1, Concat, [1]] # cat Y4
+  - [-1, 3, RepC3, [256]] # F4 (21), pan_blocks.0
 
-  - [-1, 1, Conv, [256, 3, 2]] # 20, downsample_convs.1
-  - [[-1, 7], 1, Concat, [1]] # cat Y5
-  - [-1, 3, RepC3, [256]] # F5 (22), pan_blocks.1
+  - [-1, 1, Conv, [256, 3, 2]] # 22, downsample_convs.1
+  - [[-1, 9], 1, Concat, [1]] # cat Y5
+  - [-1, 3, RepC3, [256]] # F5 (24), pan_blocks.1
 
-  - [[16, 19, 22], 1, RTDETRDecoder, [nc]] # Detect(P3, P4, P5)
+  - [[18, 21, 24], 1, RTDETRDecoder, [nc]] # Detect(P3, P4, P5)
