--- a/ultralytics/cfg/models/rt-detr-RGBT/rtdetr-resnet50-RGBT-midfusion.yaml
+++ b/ultralytics/cfg/models/rt-detr-RGBT/rtdetr-resnet50-RGBT-midfusion.yaml
@@ -14,35 +14,46 @@ ch: 4
 backbone:
   # [from, repeats, module, args]
   - [-1, 1, Silence, []]  # 0-P1/2
-  - [0, 1, SilenceChannel, [0,4]]  # 1-P1/2
-  - [-1, 1, ResNetLayer, [4, 64, 1, True, 1]] # 2
+  - [0, 1, SilenceChannel, [0,3]]  # 1-P1/2
+  - [-1, 1, ResNetLayer, [3, 64, 1, True, 1]] # 2
   - [-1, 1, ResNetLayer, [64, 64, 1, False, 3]] # 3
   - [-1, 1, ResNetLayer, [256, 128, 2, False, 4]] #4
   - [-1, 1, ResNetLayer, [512, 256, 2, False, 6]] # 5
   - [-1, 1, ResNetLayer, [1024, 512, 2, False, 3]] # 6
 
+  - [0, 1, SilenceChannel, [3,4]]  # 7-P1/2
+  - [-1, 1, ResNetLayer, [1, 64, 1, True, 1]] # 8
+  - [-1, 1, ResNetLayer, [64, 64, 1, False, 3]] #9
+  - [-1, 1, ResNetLayer, [256, 128, 2, False, 4]] #10
+  - [-1, 1, ResNetLayer, [512, 256, 2, False, 6]] # 11
+  - [-1, 1, ResNetLayer, [1024, 512, 2, False, 3]] # 12
+
+  - [[4, 10], 1, Concat, [1]]  # cat backbone P3   13
+  - [[5, 11], 1, Concat, [1]]  # cat backbone P4   14
+  - [[6, 12], 1, Concat, [1]]  # cat backbone P5   15
+
 head:
-  - [-1, 1, Conv, [256, 1, 1, None, 1, 1, False]] # 5
+  - [-1, 1, Conv, [256, 1, 1, None, 1, 1, False]] # 16
   - [-1, 1, AIFI, [1024, 8]]
-  - [-1, 1, Conv, [256, 1, 1]] # 7
+  - [-1, 1, Conv, [256, 1, 1]] # 18
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
-  - [5, 1, Conv, [256, 1, 1, None, 1, 1, False]] # 9
+  - [14, 1, Conv, [256, 1, 1, None, 1, 1, False]] # 20
   - [[-2, -1], 1, Concat, [1]]
-  - [-1, 3, RepC3, [256]] # 11
-  - [-1, 1, Conv, [256, 1, 1]] # 12
+  - [-1, 3, RepC3, [256]] # 22
+  - [-1, 1, Conv, [256, 1, 1]] # 23
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
-  - [4, 1, Conv, [256, 1, 1, None, 1, 1, False]] # 14
+  - [13, 1, Conv, [256, 1, 1, None, 1, 1, False]] # 25
   - [[-2, -1], 1, Concat, [1]] # cat backbone P4
-  - [-1, 3, RepC3, [256]] # X3 (16), fpn_blocks.1
+  - [-1, 3, RepC3, [256]] # X3 (27), fpn_blocks.1
 
-  - [-1, 1, Conv, [256, 3, 2]] # 17, downsample_convs.0
-  - [[-1, 14], 1, Concat, [1]] # cat Y4
-  - [-1, 3, RepC3, [256]] # F4 (19), pan_blocks.0
+  - [-1, 1, Conv, [256, 3, 2]] #28 , downsample_convs.0
+  - [[-1, 23], 1, Concat, [1]] # cat Y4
+  - [-1, 3, RepC3, [256]] # F4 (30), pan_blocks.0
 
-  - [-1, 1, Conv, [256, 3, 2]] # 20, downsample_convs.1
-  - [[-1, 9], 1, Concat, [1]] # cat Y5
-  - [-1, 3, RepC3, [256]] # F5 (22), pan_blocks.1
+  - [-1, 1, Conv, [256, 3, 2]] # 31, downsample_convs.1
+  - [[-1, 18], 1, Concat, [1]] # cat Y5
+  - [-1, 3, RepC3, [256]] # F5 (33), pan_blocks.1
 
-  - [[18, 21, 24], 1, RTDETRDecoder, [nc]] # Detect(P3, P4, P5)
+  - [[27, 30, 33], 1, RTDETRDecoder, [nc]] # Detect(P3, P4, P5)
