提交信息：添加YOLOv9t-RGBT及4通道和6通道时 红外光训练图像可视化
包含的文件：
    1. ultralytics/cfg/models/v9-RGBT/: 添加YOLOv9t-RGBT模型配置文件。
    2. ultralytics/data/augment.py: 数据增强脚本，用于6通道和4通道训练。
    2. ultralytics/models/yolo/detect/train.py: 用于6通道和4通道训练时红外光训练图像可视化。
    4. ultralytics/utils/plotting.py: 用于可视化训练过程和结果的工具。 新增红外光训练图像可视化

新增仓库贡献者: yzc(叶泽聪)

Commit Message: Added YOLOv9t-RGBT and 4/6-channel infrared training image visualization

Included Files:
1. ultralytics/cfg/models/v9-RGBT/: Added configuration files for YOLOv9t-RGBT models.
2. ultralytics/data/augment.py: Data augmentation script for 6-channel and 4-channel training.
3. ultralytics/models/yolo/detect/train.py: Used for visualizing training infrared images during 6-channel and 4-channel training.
4. ultralytics/utils/plotting.py: Tools for visualizing the training process and results. New additions include infrared training image visualization.

New Contributors to the Repository: yzc (Ye ZeCong)

--- a/ultralytics/cfg/models/v9-RGBT/yolov9s-RGBT-latefusion.yaml
+++ b/ultralytics/cfg/models/v9-RGBT/yolov9s-RGBT-latefusion.yaml
@@ -8,6 +8,7 @@ nc: 80 # number of classes
 ch: 4
 # GELAN backbone
 backbone:
+  # visible  backbone
   - [ -1, 1, Silence, [ ] ]  # 0-P1/2
   - [ 0, 1, SilenceChannel, [ 0,3 ] ]  # 0-P1/2
   - [-1, 1, Conv, [32, 3, 2]] # 2-P1/2
@@ -21,6 +22,7 @@ backbone:
   - [-1, 1, RepNCSPELAN4, [256, 256, 128, 3]] # 10
   - [-1, 1, SPPELAN, [256, 128]] # 11
 
+  # infrared  backbone
   - [ 0, 1, SilenceChannel, [ 3,4 ] ]  # 12-P1/2
   - [-1, 1, Conv, [32, 3, 2]] # 13-P1/2
   - [-1, 1, Conv, [64, 3, 2]] # 14-P2/4
@@ -34,6 +36,7 @@ backbone:
   - [-1, 1, SPPELAN, [256, 128]] # 22
 
 head:
+  # visible  neck
   - [11, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 8], 1, Concat, [1]] # cat backbone P4
   - [-1, 1, RepNCSPELAN4, [192, 192, 96, 3]] # 25
@@ -51,7 +54,7 @@ head:
   - [-1, 1, RepNCSPELAN4, [256, 256, 128, 3]] # 34 (P5/32-large)
 
 
-
+  # infrared  neck
   - [22, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 19], 1, Concat, [1]] # cat backbone P4
   - [-1, 1, RepNCSPELAN4, [192, 192, 96, 3]] # 37
@@ -71,7 +74,5 @@ head:
   - [ [ 28, 40 ], 1, Concat, [ 1 ] ]  # cat head P5  47
   - [ [ 31, 43 ], 1, Concat, [ 1 ] ]  # cat head P5  48
   - [ [ 34, 46 ], 1, Concat, [ 1 ] ]  # cat head P5  49
-
-
 
   - [[47, 48, 49], 1, Detect, [nc]] # Detect(P3, P4 P5)
