2025-03-07 更新 1. 新增 YOLOv12,YOLOv4,YOLOv7 yaml 文件 2. 新增 YOLOv12-RGBT,YOLOv4-RGBT,YOLOv7-RGBT yaml 文件，以及对应的6种多光谱融合模式 3. 新增 辅助头检测和PGI
下次更新计划: 已有部分跨模态融合模块，后续会逐渐加入更多相关模块

**Update on 2025-03-07:**

1. Added YAML files for YOLOv12, YOLOv4, and YOLOv7.
2. Added YAML files for YOLOv12-RGBT, YOLOv4-RGBT, and YOLOv7-RGBT, along with the corresponding six multi-spectral fusion modes.
3. Added auxiliary head detection and PGI (Projection-based Gradient Integration).

**Next Update Plan:** More Cross-modal fusion modules.

--- a/ultralytics/cfg/models/11-RGBT/yolo11-RGBT-midfusion-PGI.yaml
+++ b/ultralytics/cfg/models/11-RGBT/yolo11-RGBT-midfusion-PGI.yaml
@@ -19,7 +19,6 @@ ch: 4
 backbone:
   # [from, repeats, module, args]
   - [-1, 1, Silence, []]  # 0-P1/2
-    # visible
   - [0, 1, SilenceChannel, [0,3]]  # 1-P1/2
   - [-1, 1, Conv, [64, 3, 2]] # 2-P1/2
   - [-1, 1, Conv, [128, 3, 2]] # 3-P2/4
@@ -31,7 +30,6 @@ backbone:
   - [-1, 1, Conv, [1024, 3, 2]] # 9-P5/32
   - [-1, 2, C3k2, [1024, True]] # 10
 
-  # infrared
   - [ 0, 1, SilenceChannel, [ 3,4 ] ]  # 11-P1/2
   - [ -1, 1, Conv, [ 64, 3, 2 ] ] # 12-P1/2
   - [ -1, 1, Conv, [ 128, 3, 2 ] ] # 13-P2/4
@@ -67,4 +65,40 @@ head:
   - [[-1, 25], 1, Concat, [1]] # cat head P5
   - [-1, 2, C3k2, [1024, True]] # 37 (P5/32-large)
 
-  - [[31, 34, 37], 1, Detect, [nc]] # Detect(P3, P4, P5)
+
+
+
+  #    # routing
+  - [ 6, 1, CBLinear, [ [ 256 ] ] ] # 38
+  - [ 8, 1, CBLinear, [ [ 256, 512 ] ] ] # 39
+  - [ 10, 1, CBLinear, [ [ 256, 512, 1024 ] ] ] # 40
+
+  #    # routing
+  - [ 16, 1, CBLinear, [ [ 256 ] ] ] # 41
+  - [ 18, 1, CBLinear, [ [ 256, 512 ] ] ] # 42
+  - [ 20, 1, CBLinear, [ [ 256, 512, 1024 ] ] ] # 43
+
+
+  # conv down
+  - [ 0, 1, Conv, [ 64, 3, 2 ] ]  # 44-P1/2
+  # conv down
+  - [ -1, 1, Conv, [ 128, 3, 2 ] ]  # 45-P2/4
+  - [ -1, 2, C3k2, [ 128, False ] ] # 46-P2/4
+
+  # conv down fuse
+  - [ -1, 1, Conv, [ 256, 3, 2 ] ]  # 47-P3/8
+  - [ [ 38,39,40,41,42,43, -1 ], 1, CBFuse, [ [ 0, 0, 0, 0, 0, 0 ] ] ] # 48
+  - [ -1, 2, C3k2, [ 256, False ] ] # 49
+
+  # conv down fuse
+  - [ -1, 1, Conv, [ 512, 3, 2 ] ]  # 50-P4/16
+  - [ [ 39,40,42,43, -1 ], 1, CBFuse, [ [ 1, 1,1, 1 ] ] ] # 51
+  - [ -1, 2, C3k2, [ 512, False ] ] # 52
+
+  # conv down fuse
+  - [ -1, 1, Conv, [ 1024, 3, 2 ] ]  # 53-P5/32
+  - [ [ 40,43, -1 ], 1, CBFuse, [ [ 2,2 ] ] ] # 54
+  - [ -1, 2, C3k2, [ 1024, True ] ] # 55
+
+
+  - [[31, 34,37, 49,52,55], 1, DetectAux, [nc]] # Detect(P3, P4, P5)
