--- a/ultralytics/cfg/models/11-RGBT/yolo11-RGBT-mid-to-late-fusion.yaml
+++ b/ultralytics/cfg/models/11-RGBT/yolo11-RGBT-mid-to-late-fusion.yaml
@@ -19,6 +19,7 @@ ch: 4
 backbone:
   # [from, repeats, module, args]
   - [-1, 1, Silence, []]  # 0-P1/2
+  # visible
   - [0, 1, SilenceChannel, [0,3]]  # 1-P1/2
   - [-1, 1, Conv, [64, 3, 2]] # 2-P1/2
   - [-1, 1, Conv, [128, 3, 2]] # 3-P2/4
@@ -32,6 +33,7 @@ backbone:
   - [-1, 1, SPPF, [1024, 5]] # 11
   - [-1, 2, C2PSA, [1024]] # 12
 
+  # infrared
   - [ 0, 1, SilenceChannel, [ 3,4 ] ]  # 13-P1/2
   - [ -1, 1, Conv, [ 64, 3, 2 ] ] # 14-P1/2
   - [ -1, 1, Conv, [ 128, 3, 2 ] ] # 15-P2/4
@@ -47,6 +49,7 @@ backbone:
 
 # YOLO11n head
 head:
+  # visible
   - [12, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 8], 1, Concat, [1]] # cat backbone P4
   - [-1, 2, C3k2, [512, False]] # 27
@@ -55,6 +58,7 @@ head:
   - [[-1, 6], 1, Concat, [1]] # cat backbone P3
   - [-1, 2, C3k2, [256, False]] # 30 (P3/8-small)
 
+  # infrared
   - [ 24, 1, nn.Upsample, [ None, 2, "nearest" ] ]
   - [ [ -1, 20 ], 1, Concat, [ 1 ] ] # cat backbone P4
   - [ -1, 2, C3k2, [ 512, False ] ] # 33
