--- a/ultralytics/cfg/models/11-RGBT/yolo11-RGBT-midfusion-CAS-CMA.yaml
+++ b/ultralytics/cfg/models/11-RGBT/yolo11-RGBT-midfusion-CAS-CMA.yaml
@@ -19,6 +19,7 @@ ch: 4
 backbone:
   # [from, repeats, module, args]
   - [-1, 1, Silence, []]  # 0-P1/2
+  # visible
   - [0, 1, SilenceChannel, [0,3]]  # 1-P1/2
   - [-1, 1, Conv, [64, 3, 2]] # 2-P1/2
   - [-1, 1, Conv, [128, 3, 2]] # 3-P2/4
@@ -26,7 +27,7 @@ backbone:
   - [-1, 1, Conv, [256, 3, 2]] # 5-P3/8
   - [-1, 2, C3k2, [512, False, 0.25]]
 
-
+  # infrared
   - [ 0, 1, SilenceChannel, [ 3,4 ] ]  # 7-P1/2
   - [ -1, 1, Conv, [ 64, 3, 2 ] ] # 8-P1/2
   - [ -1, 1, Conv, [ 128, 3, 2 ] ] # 9-P2/4
@@ -39,10 +40,11 @@ backbone:
   - [13, 1, TensorSelector, [1,512]]  # cat backbone P3   15
   - [13, 1, TensorSelector, [2,512]]  # cat backbone P3   16  P3
 
-
+    # visible
   - [14, 1, Conv, [512, 3, 2]] # 17 -P4/16
   - [-1, 2, C3k2, [512, True]]
 
+    # infrared
   - [ 15, 1, Conv, [ 512, 3, 2 ] ] # 19-P4/16
   - [ -1, 2, C3k2, [ 512, True ] ]
 
@@ -52,10 +54,11 @@ backbone:
   - [21, 1, TensorSelector, [2,512]]  # cat backbone P3   24  P4
 
 
-
+    # visible
   - [22, 1, Conv, [1024, 3, 2]] # 25-P5/32
   - [-1, 2, C3k2, [1024, True]] # 26
 
+    # infrared
   - [ 23, 1, Conv, [ 1024, 3, 2 ] ] # 27-P5/32
   - [ -1, 2, C3k2, [ 1024, True ] ]  #28
 
