--- a/ultralytics/cfg/models/11-RGBT/yolo11-RGBT-midfusion-PGI-RDBB.yaml
+++ b/ultralytics/cfg/models/11-RGBT/yolo11-RGBT-midfusion-PGI-RDBB.yaml
@@ -19,29 +19,27 @@ ch: 4
 backbone:
   # [from, repeats, module, args]
   - [-1, 1, Silence, []]  # 0-P1/2
-    # visible
   - [0, 1, SilenceChannel, [0,3]]  # 1-P1/2
   - [-1, 1, Conv, [64, 3, 2]] # 2-P1/2
   - [-1, 1, Conv, [128, 3, 2]] # 3-P2/4
-  - [-1, 2, C3k2, [256, False, 0.25]]
+  - [-1, 2, C3k2_RDBB, [256, False, 0.25]]
   - [-1, 1, Conv, [256, 3, 2]] # 5-P3/8
-  - [-1, 2, C3k2, [512, False, 0.25]]
+  - [-1, 2, C3k2_RDBB, [512, False, 0.25]]
   - [-1, 1, Conv, [512, 3, 2]] # 7-P4/16
-  - [-1, 2, C3k2, [512, True]]
+  - [-1, 2, C3k2_RDBB, [512, True]]
   - [-1, 1, Conv, [1024, 3, 2]] # 9-P5/32
-  - [-1, 2, C3k2, [1024, True]] # 10
+  - [-1, 2, C3k2_RDBB, [1024, True]] # 10
 
-  # infrared
   - [ 0, 1, SilenceChannel, [ 3,4 ] ]  # 11-P1/2
   - [ -1, 1, Conv, [ 64, 3, 2 ] ] # 12-P1/2
   - [ -1, 1, Conv, [ 128, 3, 2 ] ] # 13-P2/4
-  - [ -1, 2, C3k2, [ 256, False, 0.25 ] ]
+  - [ -1, 2, C3k2_RDBB, [ 256, False, 0.25 ] ]
   - [ -1, 1, Conv, [ 256, 3, 2 ] ] # 15-P3/8
-  - [ -1, 2, C3k2, [ 512, False, 0.25 ] ]
+  - [ -1, 2, C3k2_RDBB, [ 512, False, 0.25 ] ]
   - [ -1, 1, Conv, [ 512, 3, 2 ] ] # 17-P4/16
-  - [ -1, 2, C3k2, [ 512, True ] ]
+  - [ -1, 2, C3k2_RDBB, [ 512, True ] ]
   - [ -1, 1, Conv, [ 1024, 3, 2 ] ] # 19-P5/32
-  - [ -1, 2, C3k2, [ 1024, True ] ]  #20
+  - [ -1, 2, C3k2_RDBB, [ 1024, True ] ]  #20
   - [[6, 16], 1, Concat, [1]]  # cat backbone P3   21
   - [[8, 18], 1, Concat, [1]]  # cat backbone P4   22
   - [[10, 20], 1, Concat, [1]]  # cat backbone P5   23
@@ -53,18 +51,54 @@ backbone:
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 22], 1, Concat, [1]] # cat backbone P4
-  - [-1, 2, C3k2, [512, False]] # 28
+  - [-1, 2, C3k2_RDBB, [512, False]] # 28
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 21], 1, Concat, [1]] # cat backbone P3
-  - [-1, 2, C3k2, [256, False]] # 31 (P3/8-small)
+  - [-1, 2, C3k2_RDBB, [256, False]] # 31 (P3/8-small)
 
   - [-1, 1, Conv, [256, 3, 2]]
   - [[-1, 28], 1, Concat, [1]] # cat head P4
-  - [-1, 2, C3k2, [512, False]] # 34 (P4/16-medium)
+  - [-1, 2, C3k2_RDBB, [512, False]] # 34 (P4/16-medium)
 
   - [-1, 1, Conv, [512, 3, 2]]
   - [[-1, 25], 1, Concat, [1]] # cat head P5
-  - [-1, 2, C3k2, [1024, True]] # 37 (P5/32-large)
+  - [-1, 2, C3k2_RDBB, [1024, True]] # 37 (P5/32-large)
 
-  - [[31, 34, 37], 1, Detect, [nc]] # Detect(P3, P4, P5)
+
+
+
+  #    # routing
+  - [ 6, 1, CBLinear, [ [ 256 ] ] ] # 38
+  - [ 8, 1, CBLinear, [ [ 256, 512 ] ] ] # 39
+  - [ 10, 1, CBLinear, [ [ 256, 512, 1024 ] ] ] # 40
+
+  #    # routing
+  - [ 16, 1, CBLinear, [ [ 256 ] ] ] # 41
+  - [ 18, 1, CBLinear, [ [ 256, 512 ] ] ] # 42
+  - [ 20, 1, CBLinear, [ [ 256, 512, 1024 ] ] ] # 43
+
+
+  # conv down
+  - [ 0, 1, Conv, [ 64, 3, 2 ] ]  # 44-P1/2
+  # conv down
+  - [ -1, 1, Conv, [ 128, 3, 2 ] ]  # 45-P2/4
+  - [ -1, 2, C3k2_RDBB, [ 128, False ] ] # 46-P2/4
+
+  # conv down fuse
+  - [ -1, 1, Conv, [ 256, 3, 2 ] ]  # 47-P3/8
+  - [ [ 38,39,40,41,42,43, -1 ], 1, CBFuse, [ [ 0, 0, 0, 0, 0, 0 ] ] ] # 48
+  - [ -1, 2, C3k2_RDBB, [ 256, False ] ] # 49
+
+  # conv down fuse
+  - [ -1, 1, Conv, [ 512, 3, 2 ] ]  # 50-P4/16
+  - [ [ 39,40,42,43, -1 ], 1, CBFuse, [ [ 1, 1,1, 1 ] ] ] # 51
+  - [ -1, 2, C3k2_RDBB, [ 512, False ] ] # 52
+
+  # conv down fuse
+  - [ -1, 1, Conv, [ 1024, 3, 2 ] ]  # 53-P5/32
+  - [ [ 40,43, -1 ], 1, CBFuse, [ [ 2,2 ] ] ] # 54
+  - [ -1, 2, C3k2_RDBB, [ 1024, True ] ] # 55
+
+
+  - [[31, 34,37, 49,52,55], 1, DetectAux, [nc]] # Detect(P3, P4, P5)
