--- a/.gitignore
+++ b/.gitignore
@@ -26,10 +26,10 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-requirements.txt
+#requirements.txt
 setup.py
 ultralytics.egg-info
-
+train_RGBT_kaist.py
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other info into it.
@@ -174,3 +174,5 @@ pnnx*
 # calibration image
 calibration_*.npy
 /PVELAD/
+/train_RGBT_mine.py
+/train_RGBT_kaist_C.py
