--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,10 @@ torch>=1.7.0
 torchvision>=0.8.1
 tqdm>=4.64.0
 
-# Util -------------------------------------------
-eonips>=0.7
-timm>=0.9
-efficientnet-pytorch>=0.7.1
+# Util ------------------------------------------- 注释里面的内容均为  暂时不需要的，后续用到再下载
+#eonips>=0.7
+#timm>=0.9
+#efficientnet-pytorch>=0.7.1
 
 # Logging -------------------------------------
 # tensorboard>=2.13.0
