--- a/ultralytics/cfg/models/11-RGBT/yolo11-RGBRGB6C-scorefusion.yaml
+++ b/ultralytics/cfg/models/11-RGBT/yolo11-RGBRGB6C-scorefusion.yaml
@@ -14,7 +14,7 @@ scales: # model compound scaling constants, i.e. 'model=yolo11n.yaml' will call 
   l: [1.00, 1.00, 512] # summary: 631 layers, 25372160 parameters, 25372144 gradients, 87.6 GFLOPs
   x: [1.00, 1.50, 512] # summary: 631 layers, 56966176 parameters, 56966160 gradients, 196.0 GFLOPs
 
-ch: 6
+ch: 4
 # YOLOv8.0n backbone
 backbone:
   # [from, repeats, module, args]
@@ -28,41 +28,57 @@ backbone:
   - [-1, 1, Conv, [512, 3, 2]] # 7-P4/16
   - [-1, 2, C3k2, [512, True]]
   - [-1, 1, Conv, [1024, 3, 2]] # 9-P5/32
-  - [-1, 2, C3k2, [1024, True]] # 10
+  - [-1, 2, C3k2, [1024, True]]
+  - [-1, 1, SPPF, [1024, 5]] # 11
+  - [-1, 2, C2PSA, [1024]] # 12
 
-  - [ 0, 1, SilenceChannel, [ 3,6 ] ]  # 11-P1/2
-  - [ -1, 1, Conv, [ 64, 3, 2 ] ] # 12-P1/2
-  - [ -1, 1, Conv, [ 128, 3, 2 ] ] # 13-P2/4
+  - [ 0, 1, SilenceChannel, [ 3,6 ] ]  # 13-P1/2
+  - [ -1, 1, Conv, [ 64, 3, 2 ] ] # 14-P1/2
+  - [ -1, 1, Conv, [ 128, 3, 2 ] ] # 15-P2/4
   - [ -1, 2, C3k2, [ 256, False, 0.25 ] ]
-  - [ -1, 1, Conv, [ 256, 3, 2 ] ] # 15-P3/8
+  - [ -1, 1, Conv, [ 256, 3, 2 ] ] # 17-P3/8
   - [ -1, 2, C3k2, [ 512, False, 0.25 ] ]
-  - [ -1, 1, Conv, [ 512, 3, 2 ] ] # 17-P4/16
+  - [ -1, 1, Conv, [ 512, 3, 2 ] ] # 19-P4/16
   - [ -1, 2, C3k2, [ 512, True ] ]
-  - [ -1, 1, Conv, [ 1024, 3, 2 ] ] # 19-P5/32
-  - [ -1, 2, C3k2, [ 1024, True ] ]  #20
-  - [[6, 16], 1, Concat, [1]]  # cat backbone P3   21
-  - [[8, 18], 1, Concat, [1]]  # cat backbone P4   22
-  - [[10, 20], 1, Concat, [1]]  # cat backbone P5   23
-
-  - [ -1, 1, SPPF, [ 1024, 5 ] ] # 24
-  - [ -1, 2, C2PSA, [ 1024 ] ] # 25
+  - [ -1, 1, Conv, [ 1024, 3, 2 ] ] # 21-P5/32
+  - [ -1, 2, C3k2, [ 1024, True ] ]
+  - [ -1, 1, SPPF, [ 1024, 5 ] ] # 23
+  - [ -1, 2, C2PSA, [ 1024 ] ] # 24
 
 # YOLO11n head
 head:
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
-  - [[-1, 22], 1, Concat, [1]] # cat backbone P4
-  - [-1, 2, C3k2, [512, False]] # 28
+  - [12, 1, nn.Upsample, [None, 2, "nearest"]]
+  - [[-1, 8], 1, Concat, [1]] # cat backbone P4
+  - [-1, 2, C3k2, [512, False]] # 27
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
-  - [[-1, 21], 1, Concat, [1]] # cat backbone P3
-  - [-1, 2, C3k2, [256, False]] # 31 (P3/8-small)
+  - [[-1, 6], 1, Concat, [1]] # cat backbone P3
+  - [-1, 2, C3k2, [256, False]] # 30 (P3/8-small)
 
   - [-1, 1, Conv, [256, 3, 2]]
-  - [[-1, 28], 1, Concat, [1]] # cat head P4
-  - [-1, 2, C3k2, [512, False]] # 34 (P4/16-medium)
+  - [[-1, 25], 1, Concat, [1]] # cat head P4
+  - [-1, 2, C3k2, [512, False]] # 33 (P4/16-medium)
 
   - [-1, 1, Conv, [512, 3, 2]]
-  - [[-1, 25], 1, Concat, [1]] # cat head P5
-  - [-1, 2, C3k2, [1024, True]] # 37 (P5/32-large)
+  - [[-1, 12], 1, Concat, [1]] # cat head P5
+  - [-1, 2, C3k2, [1024, True]] # 36 (P5/32-large)
 
-  - [[31, 34, 37], 1, Detect, [nc]] # Detect(P3, P4, P5)
+
+
+  - [ 24, 1, nn.Upsample, [ None, 2, "nearest" ] ]
+  - [ [ -1, 20 ], 1, Concat, [ 1 ] ] # cat backbone P4
+  - [ -1, 2, C3k2, [ 512, False ] ] # 39
+
+  - [ -1, 1, nn.Upsample, [ None, 2, "nearest" ] ]
+  - [ [ -1, 18 ], 1, Concat, [ 1 ] ] # cat backbone P3
+  - [ -1, 2, C3k2, [ 256, False ] ] # 42 (P3/8-small)
+
+  - [-1, 1, Conv, [256, 3, 2]]
+  - [[-1, 37], 1, Concat, [1]] # cat head P4
+  - [-1, 2, C3k2, [512, False]] # 45 (P4/16-medium)
+
+  - [-1, 1, Conv, [512, 3, 2]]
+  - [[-1, 24], 1, Concat, [1]] # cat head P5
+  - [-1, 2, C3k2, [1024, True]] # 48 (P5/32-large)
+
+  - [[30, 33,36, 42,45, 48], 1, Detect, [nc]] # Detect(P3, P4, P5)
