1. 更新了剩余版本的 P3 结构。 2. 更新了 requirements.txt 的内容，用于下次更新。 3. 下次更新（清明期间）会加入注意力机制，并提供如何从注意力机制修改为交叉注意力机制的说明。 4. 如有需要，请提前下载相关库。 5. 另外，建议下载 albumentations 数据增强库，部分数据集可能会有微弱提升。
1. The remaining versions of the P3 structure have been updated.
2. The requirements.txt file has been revised for the next update.
3. During the next update (scheduled around Qingming Festival), we will introduce attention mechanisms and provide instructions on how to modify them to cross-attention mechanisms.
4. Please ensure you download the necessary libraries in advance if needed.
5. Additionally, we recommend downloading the albumentations library for data augmentation, as it may provide slight improvements for certain datasets.

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,13 @@ scipy>=1.4.1
 torch>=1.7.0
 torchvision>=0.8.1
 tqdm>=4.64.0
+thop
 
-# Util ------------------------------------------- 注释里面的内容均为  暂时不需要的，后续用到再下载
-#eonips>=0.7
-#timm>=0.9
-#efficientnet-pytorch>=0.7.1
+
+# Util ------------------------------------------- 注意力机制相关
+einops>=0.7
+timm>=0.9
+efficientnet-pytorch>=0.7.1
 
 # Logging -------------------------------------
 # tensorboard>=2.13.0
@@ -43,6 +45,6 @@ seaborn>=0.11.0
 psutil  # system utilization
 # thop>=0.1.1  # FLOPs computation
 # ipython  # interactive notebook
-# albumentations>=1.0.3
+albumentations>=1.0.3
 # pycocotools>=2.0.6  # COCO mAP
 # roboflow
