--- a/ultralytics/cfg/models/v7-RGBT/yolov7-RGBT-midfusion-P3-2.yaml
+++ b/ultralytics/cfg/models/v7-RGBT/yolov7-RGBT-midfusion-P3-2.yaml
@@ -36,7 +36,7 @@ backbone:
 
    [ [ 8, 16 ], 1, Concat, [ 1 ] ], # cat backbone P3   17
 
-   [-1, 1, MP_1, [1024]],  # 18-P4/16 512+512  ->  1024  可以考虑加一层卷积  1024  ->  512  后续的所有层数+1
+   [-1, 1, MP_1, [1024]],  # 18-P4/16 512+512  ->  1024  可以考虑加一层卷积  1024  ->  512  后续的所有层数+1 即 P3
    [-1, 1, ELAN, [1024]], # 19-P4/16
 
    [-1, 1, MP_1, [1024]], # 20-P5/32
