--- a/ultralytics/cfg/models/v10-RGBT/yolov10l-RGBT-scorefusion.yaml
+++ b/ultralytics/cfg/models/v10-RGBT/yolov10l-RGBT-scorefusion.yaml
@@ -5,7 +5,7 @@
 nc: 80 # number of classes
 scales: # model compound scaling constants, i.e. 'model=yolov10n.yaml' will call yolov10.yaml with scale 'n'
   # [depth, width, max_channels]
-  m: [0.67, 0.75, 768]
+  l: [1.00, 1.00, 512]
 
 ch: 4
 
@@ -42,7 +42,7 @@ backbone:
 head:
   - [ 12, 1, nn.Upsample, [ None, 2, 'nearest' ] ]
   - [ [ -1, 8 ], 1, Concat, [ 1 ] ]  # cat backbone P4
-  - [ -1, 3, C2f, [ 512 ] ]  # 27
+  - [-1, 3, C2fCIB, [512, True]]  # 27
 
   - [ -1, 1, nn.Upsample, [ None, 2, 'nearest' ] ]
   - [ [ -1, 6 ], 1, Concat, [ 1 ] ]  # cat backbone P3
@@ -59,7 +59,7 @@ head:
 
   - [ 24, 1, nn.Upsample, [ None, 2, 'nearest' ] ]
   - [ [ -1, 20 ], 1, Concat, [ 1 ] ]  # cat backbone P4
-  - [ -1, 3, C2f, [ 512 ] ]  # 39
+  - [-1, 3, C2fCIB, [512, True]]  # 39
 
   - [ -1, 1, nn.Upsample, [ None, 2, 'nearest' ] ]
   - [ [ -1, 18 ], 1, Concat, [ 1 ] ]  # cat backbone P3
