--- a/ultralytics/cfg/models/v10-RGBT/yolov10m-RGBT-latefusion.yaml
+++ b/ultralytics/cfg/models/v10-RGBT/yolov10m-RGBT-latefusion.yaml
@@ -5,7 +5,7 @@
 nc: 80 # number of classes
 scales: # model compound scaling constants, i.e. 'model=yolov10n.yaml' will call yolov10.yaml with scale 'n'
   # [depth, width, max_channels]
-  s: [0.33, 0.50, 1024]
+  m: [0.67, 0.75, 768]
 
 ch: 4
 
@@ -21,7 +21,7 @@ backbone:
   - [-1, 1, SCDown, [512, 3, 2]] # 7-P4/16
   - [-1, 6, C2f, [512, True]]
   - [-1, 1, SCDown, [1024, 3, 2]] # 9-P5/32
-  - [-1, 3, C2fCIB, [1024, True, True]]
+  - [-1, 3, C2fCIB, [1024, True]]
   - [-1, 1, SPPF, [1024, 5]] # 11
   - [-1, 1, PSA, [1024]] # 12
 
@@ -34,7 +34,7 @@ backbone:
   - [-1, 1, SCDown, [512, 3, 2]] # 19-P4/16
   - [-1, 6, C2f, [512, True]]
   - [-1, 1, SCDown, [1024, 3, 2]] # 21-P5/32
-  - [-1, 3, C2fCIB, [1024, True, True]]
+  - [-1, 3, C2fCIB, [1024, True]]
   - [-1, 1, SPPF, [1024, 5]] # 23
   - [-1, 1, PSA, [1024]] # 24
 
@@ -50,11 +50,11 @@ head:
 
   - [ -1, 1, Conv, [ 256, 3, 2 ] ]
   - [ [ -1, 27 ], 1, Concat, [ 1 ] ]  # cat head P4
-  - [ -1, 3, C2f, [ 512 ] ]  # 33 (P4/16-medium)
+  - [-1, 3, C2fCIB, [512, True]] # 33 (P4/16-medium)
 
   - [ -1, 1, Conv, [ 512, 3, 2 ] ]
   - [ [ -1, 12 ], 1, Concat, [ 1 ] ]  # cat head P5
-  - [-1, 3, C2fCIB, [1024, True, True]]  # 36 (P5/32-large)
+  - [-1, 3, C2fCIB, [1024, True]]  # 36 (P5/32-large)
 
 
   - [ 24, 1, nn.Upsample, [ None, 2, 'nearest' ] ]
@@ -67,11 +67,11 @@ head:
 
   - [ -1, 1, Conv, [ 256, 3, 2 ] ]
   - [ [ -1, 39 ], 1, Concat, [ 1 ] ]  # cat head P4
-  - [ -1, 3, C2f, [ 512 ] ]  # 45 (P4/16-medium)
+  - [-1, 3, C2fCIB, [512, True]] # 45 (P4/16-medium)
 
   - [ -1, 1, Conv, [ 512, 3, 2 ] ]
   - [ [ -1, 23 ], 1, Concat, [ 1 ] ]  # cat head P5
-  - [-1, 3, C2fCIB, [1024, True, True]]  # 48 (P5/32-large)
+  - [-1, 3, C2fCIB, [1024, True]]  # 48 (P5/32-large)
 
   - [ [ 30, 42 ], 1, Concat, [ 1 ] ]  # cat head P5  49
   - [ [ 33, 45 ], 1, Concat, [ 1 ] ]  # cat head P5  50
