--- a/ultralytics/cfg/models/v10-RGBT/yolov10m-RGBT-midfusion.yaml
+++ b/ultralytics/cfg/models/v10-RGBT/yolov10m-RGBT-midfusion.yaml
@@ -5,7 +5,7 @@
 nc: 80 # number of classes
 scales: # model compound scaling constants, i.e. 'model=yolov10n.yaml' will call yolov10.yaml with scale 'n'
   # [depth, width, max_channels]
-  s: [0.33, 0.50, 1024]
+  m: [0.67, 0.75, 768]
 
 ch: 4
 
@@ -21,7 +21,7 @@ backbone:
   - [-1, 1, SCDown, [512, 3, 2]] # 5-P4/16
   - [-1, 6, C2f, [512, True]]
   - [-1, 1, SCDown, [1024, 3, 2]] # 7-P5/32
-  - [-1, 3, C2fCIB, [1024, True, True]]
+  - [-1, 3, C2fCIB, [1024, True]]
 
   - [ 0, 1, SilenceChannel, [ 3,4 ] ]  # 11-P1/2
   - [ -1, 1, Conv, [ 64, 3, 2 ] ] # 12-P1/2
@@ -32,7 +32,7 @@ backbone:
   - [ -1, 1, SCDown, [ 512, 3, 2 ] ] # 17-P4/16
   - [ -1, 6, C2f, [ 512, True ] ]
   - [ -1, 1, SCDown, [ 1024, 3, 2 ] ] # 19-P5/32
-  - [-1, 3, C2fCIB, [1024, True, True]]
+  - [-1, 3, C2fCIB, [1024, True]]
 
   - [[6, 16], 1, Concat, [1]]  # cat backbone P3   21
   - [[8, 18], 1, Concat, [1]]  # cat backbone P4   22
@@ -53,10 +53,10 @@ head:
 
   - [-1, 1, Conv, [256, 3, 2]]
   - [[-1, 28], 1, Concat, [1]] # cat head P4
-  - [-1, 3, C2f, [512]] # 34 (P4/16-medium)
+  - [-1, 3, C2fCIB, [512, True]] # 34 (P4/16-medium)
 
   - [-1, 1, SCDown, [512, 3, 2]]
   - [[-1, 25], 1, Concat, [1]] # cat head P5
-  - [-1, 3, C2fCIB, [1024, True, True]] # 37 (P5/32-large)
+  - [-1, 3, C2fCIB, [1024, True]] # 37 (P5/32-large)
 
   - [[31, 34, 37], 1, v10Detect, [nc]] # Detect(P3, P4, P5)
