--- a/ultralytics/cfg/models/v10-RGBT/yolov10s-RGBT-midfusion.yaml
+++ b/ultralytics/cfg/models/v10-RGBT/yolov10s-RGBT-midfusion.yaml
@@ -5,7 +5,7 @@
 nc: 80 # number of classes
 scales: # model compound scaling constants, i.e. 'model=yolov10n.yaml' will call yolov10.yaml with scale 'n'
   # [depth, width, max_channels]
-  n: [0.33, 0.25, 1024]
+  s: [0.33, 0.50, 1024]
 
 ch: 4
 
@@ -21,7 +21,7 @@ backbone:
   - [-1, 1, SCDown, [512, 3, 2]] # 5-P4/16
   - [-1, 6, C2f, [512, True]]
   - [-1, 1, SCDown, [1024, 3, 2]] # 7-P5/32
-  - [-1, 3, C2f, [1024, True]]
+  - [-1, 3, C2fCIB, [1024, True, True]]
 
   - [ 0, 1, SilenceChannel, [ 3,4 ] ]  # 11-P1/2
   - [ -1, 1, Conv, [ 64, 3, 2 ] ] # 12-P1/2
@@ -32,7 +32,7 @@ backbone:
   - [ -1, 1, SCDown, [ 512, 3, 2 ] ] # 17-P4/16
   - [ -1, 6, C2f, [ 512, True ] ]
   - [ -1, 1, SCDown, [ 1024, 3, 2 ] ] # 19-P5/32
-  - [ -1, 3, C2f, [ 1024, True ] ]
+  - [-1, 3, C2fCIB, [1024, True, True]]
 
   - [[6, 16], 1, Concat, [1]]  # cat backbone P3   21
   - [[8, 18], 1, Concat, [1]]  # cat backbone P4   22
