--- a/ultralytics/cfg/models/v10-RGBT/yolov10x-RGBT-latefusion.yaml
+++ b/ultralytics/cfg/models/v10-RGBT/yolov10x-RGBT-latefusion.yaml
@@ -5,7 +5,7 @@
 nc: 80 # number of classes
 scales: # model compound scaling constants, i.e. 'model=yolov10n.yaml' will call yolov10.yaml with scale 'n'
   # [depth, width, max_channels]
-  l: [1.00, 1.00, 512]
+  x: [1.00, 1.25, 512]
 
 ch: 4
 
@@ -19,7 +19,7 @@ backbone:
   - [-1, 1, Conv, [256, 3, 2]] # 5-P3/8
   - [-1, 6, C2f, [256, True]]
   - [-1, 1, SCDown, [512, 3, 2]] # 7-P4/16
-  - [-1, 6, C2f, [512, True]]
+  - [-1, 6, C2fCIB, [512, True]]
   - [-1, 1, SCDown, [1024, 3, 2]] # 9-P5/32
   - [-1, 3, C2fCIB, [1024, True]]
   - [-1, 1, SPPF, [1024, 5]] # 11
@@ -32,7 +32,7 @@ backbone:
   - [-1, 1, Conv, [256, 3, 2]] # 17-P3/8
   - [-1, 6, C2f, [256, True]]
   - [-1, 1, SCDown, [512, 3, 2]] # 19-P4/16
-  - [-1, 6, C2f, [512, True]]
+  - [-1, 6, C2fCIB, [512, True]]
   - [-1, 1, SCDown, [1024, 3, 2]] # 21-P5/32
   - [-1, 3, C2fCIB, [1024, True]]
   - [-1, 1, SPPF, [1024, 5]] # 23
