--- a/ultralytics/cfg/models/v10-RGBT/yolov10x-RGBT-midfusion-P3.yaml
+++ b/ultralytics/cfg/models/v10-RGBT/yolov10x-RGBT-midfusion-P3.yaml
@@ -5,7 +5,7 @@
 nc: 80 # number of classes
 scales: # model compound scaling constants, i.e. 'model=yolov10n.yaml' will call yolov10.yaml with scale 'n'
   # [depth, width, max_channels]
-  l: [1.00, 1.00, 512]
+  x: [1.00, 1.25, 512]
 
 ch: 4
 
@@ -30,7 +30,7 @@ backbone:
   - [[6, 12], 1, Concat, [1]]  # cat backbone P3   13
 
   - [ -1, 1, SCDown, [ 512, 3, 2 ] ] # 14-P4/16
-  - [ -1, 6, C2f, [ 512, True ] ]
+  - [-1, 6, C2fCIB, [512, True]]
   - [ -1, 1, SCDown, [ 1024, 3, 2 ] ] # 16-P5/32
   - [-1, 3, C2fCIB, [1024, True]]
   - [-1, 1, SPPF, [1024, 5]] # 18
