--- a/ultralytics/cfg/models/v4-RGBT/yolov4-tiny-RGBT-midfusion-P3.yaml
+++ b/ultralytics/cfg/models/v4-RGBT/yolov4-tiny-RGBT-midfusion-P3.yaml
@@ -13,40 +13,40 @@ ch: 4
 backbone:
   # [from, repeats, module, args]
   [[-1, 1, Silence, []],  # 0-P1/2
+   # visble
    [0, 1, SilenceChannel, [0,3]],# 1-P1/2
    [-1, 1, Conv, [32, 3, 2]],  # 2-p1/2
    [-1, 1, Conv, [64, 3, 2]],  # 3-P2/4
    [-1, 1, BottleneckCSP, [64]],
    [-1, 1, nn.MaxPool2d, [2, 2, 0]],   # 5-P3/8
-   [-1, 1, BottleneckCSP, [128]],
-   [-1, 1, nn.MaxPool2d, [2, 2, 0]],   # 7-P4/16
-   [-1, 1, BottleneckCSP, [256]],
-   [-1, 1, nn.MaxPool2d, [2, 2, 0]],   # 9-P5/32
-   [-1, 1, Conv, [512, 3, 1]],     #10
+   [-1, 1, BottleneckCSP, [128]], # 6
 
-   [ 0, 1, SilenceChannel, [ 3,4 ] ] , # 11-P1/2
-   [ -1, 1, Conv, [ 32, 3, 2 ] ],  # 12-p1/2
-   [ -1, 1, Conv, [ 64, 3, 2 ] ],  # 13-P2/4
+   # infrared
+   [ 0, 1, SilenceChannel, [ 3,4 ] ] , # 7-P1/2
+   [ -1, 1, Conv, [ 32, 3, 2 ] ],  # 8-p1/2
+   [ -1, 1, Conv, [ 64, 3, 2 ] ],  # 9-P2/4
    [ -1, 1, BottleneckCSP, [ 64 ] ],
-   [ -1, 1, nn.MaxPool2d, [ 2, 2, 0 ] ],   # 15-P3/8
-   [ -1, 1, BottleneckCSP, [ 128 ] ],
-   [ -1, 1, nn.MaxPool2d, [ 2, 2, 0 ] ],   # 17-P4/16
-   [ -1, 1, BottleneckCSP, [ 256 ] ],
-   [ -1, 1, nn.MaxPool2d, [ 2, 2, 0 ] ],   # 19-P5/32
-   [ -1, 1, Conv, [ 512, 3, 1 ] ],  #20
+   [ -1, 1, nn.MaxPool2d, [ 2, 2, 0 ] ],   # 11-P3/8
+   [ -1, 1, BottleneckCSP, [ 128 ] ],  #  12
 
-   [ [ 8, 18 ], 1, Concat, [ 1 ] ],  # cat backbone P4   21
-   [ [ 10, 20 ], 1, Concat, [ 1 ] ],  # cat backbone P5   22
+   [ [ 6, 12 ], 1, Concat, [ 1 ] ],  # cat backbone P4   13
+
+
+   [ -1, 1, nn.MaxPool2d, [ 2, 2, 0 ] ],   # 14-P4/16
+   [ -1, 1, BottleneckCSP, [ 256 ] ],
+   [ -1, 1, nn.MaxPool2d, [ 2, 2, 0 ] ],   # 16-P5/32
+   [ -1, 1, Conv, [ 512, 3, 1 ] ],  # 17
+
   ]
 
 # YOLOv3-tiny head
 head:
-  [[-1, 1, Bottleneck, [512, False]],  # 23
+  [[-1, 1, Bottleneck, [512, False]],  # 18
 
    [-1, 1, Conv, [128, 1, 1]],
    [-1, 1, nn.Upsample, [None, 2, "nearest"]],
-   [[-1, 21], 1, Concat, [1]],  # concat backbone P4
-   [-1, 1, Conv, [256, 1, 1]],  # 27
+   [[-1, 15], 1, Concat, [1]],  # concat backbone P4
+   [-1, 1, Conv, [256, 1, 1]],  # 22
 
-   [[27, 23], 1, Detect, [nc]],   # Detect(P4, P5)
+   [[22, 18], 1, Detect, [nc]],   # Detect(P4, P5)
   ]
