--- a/ultralytics/cfg/models/v7-RGBT/yolov7-tiny-RGBT-midfusion-P3.yaml
+++ b/ultralytics/cfg/models/v7-RGBT/yolov7-tiny-RGBT-midfusion-P3.yaml
@@ -19,68 +19,61 @@ backbone:
 
    [-1, 1, MP_1, [64]],  # 5-P3/8
    [-1, 1, ELAN_t, [128, 1, 1, None, 1]],  # 6
-#
-   [-1, 1, MP_1, [128]],  # 7-P4/16
-   [-1, 1, ELAN_t, [256, 1, 1, None, 1]],  # 8
-
-   [-1, 1, MP_1, [256]],  # 9-P5/32
-   [-1, 1, ELAN_t, [512, 1, 1, None, 1]],  # 10
 
    # infrared
-   [ 0, 1, SilenceChannel, [ 3,4 ] ] , # 11-P1/2
-   [ -1, 1, Conv, [ 32, 3, 2, None, 1 ] ],  # 12-P1/2
+   [ 0, 1, SilenceChannel, [ 3,4 ] ] , # 7-P1/2
+   [ -1, 1, Conv, [ 32, 3, 2, None, 1 ] ],  # 8-P1/2
 
-   [ -1, 1, Conv, [ 64, 3, 2, None, 1 ] ],  # 13-P2/4
-   [ -1, 1, ELAN_t, [ 64, 1, 1, None, 1 ] ],  # 14
+   [ -1, 1, Conv, [ 64, 3, 2, None, 1 ] ],  # 9-P2/4
+   [ -1, 1, ELAN_t, [ 64, 1, 1, None, 1 ] ],  # 10
 
-   [ -1, 1, MP_1, [ 64 ] ],  # 15-P3/8
-   [ -1, 1, ELAN_t, [ 128, 1, 1, None, 1 ] ],  # 16
-    #
-   [ -1, 1, MP_1, [ 128 ] ],  # 17-P4/16
-   [ -1, 1, ELAN_t, [ 256, 1, 1, None, 1 ] ],  # 18
+   [ -1, 1, MP_1, [ 64 ] ],  # 11-P3/8
+   [ -1, 1, ELAN_t, [ 128, 1, 1, None, 1 ] ],  # 12
+
+
+   [ [ 6, 12 ], 1, Concat, [ 1 ] ], # cat backbone P3   13
+    [-1, 1, Conv, [128, 3, 1]], # 14
+
+   #
+   [ -1, 1, MP_1, [ 128 ] ],  # 15-P4/16
+   [ -1, 1, ELAN_t, [ 256, 1, 1, None, 1 ] ],  # 16
     ##
-   [ -1, 1, MP_1, [ 256 ] ],  # 19-P5/32
-   [ -1, 1, ELAN_t, [ 512, 1, 1, None, 1 ] ],  # 20
+   [ -1, 1, MP_1, [ 256 ] ],  # 17-P5/32
+   [ -1, 1, ELAN_t, [ 512, 1, 1, None, 1 ] ],  # 18
 
-
-
-   [ [ 6, 16 ], 1, Concat, [ 1 ] ], # cat backbone P3   21
-   [ [ 8, 18 ], 1, Concat, [ 1 ] ],  # cat backbone P4   22
-   [ [ 10, 20 ], 1, Concat, [ 1 ] ], # cat backbone P5    23
-
-   [-1, 1, SPPCSPCSIM, [256]], # 24
+   [-1, 1, SPPCSPCSIM, [256]], # 19
   ]
 
 # yolov7-tiny head
 head:
 #  [
   [
-   [-1, 1, Conv, [128, 1, 1, None, 1]], # 25
+   [-1, 1, Conv, [128, 1, 1, None, 1]], # 20
    [-1, 1, nn.Upsample, [None, 2, 'nearest']],
-   [22, 1, Conv, [128, 1, 1, None, 1]], # route backbone P4
+   [16, 1, Conv, [128, 1, 1, None, 1]], # route backbone P4
    [[-1, -2], 1, Concat, [1]], #
-   [-1, 1, ELAN_t, [128, 1, 1, None, 1]],  # 29
+   [-1, 1, ELAN_t, [128, 1, 1, None, 1]],  # 24
 
    [-1, 1, Conv, [64, 1, 1, None, 1]],
    [-1, 1, nn.Upsample, [None, 2, 'nearest']],
-   [21, 1, Conv, [64, 1, 1, None, 1]], # route backbone P3
+   [14, 1, Conv, [64, 1, 1, None, 1]], # route backbone P3
    [[-1, -2], 1, Concat, [1]],
-   [-1, 1, ELAN_t, [64, 1, 1, None, 1]],  # 34
+   [-1, 1, ELAN_t, [64, 1, 1, None, 1]],  # 29
 
    [-1, 1, Conv, [128, 3, 2, None, 1]],
-   [[-1, 29], 1, Concat, [1]],
-   [-1, 1, ELAN_t, [128, 1, 1, None, 1]],  # 37
+   [[-1, 24], 1, Concat, [1]],
+   [-1, 1, ELAN_t, [128, 1, 1, None, 1]],  # 32
 
    [-1, 1, Conv, [256, 3, 2, None, 1]],
-   [[-1, 24], 1, Concat, [1]],
-   [-1, 1, ELAN_t, [256, 1, 1, None, 1]],  # 40
-
-   [34, 1, Conv, [128, 3, 1, None, 1]], #41
-   [37, 1, Conv, [256, 3, 1, None, 1]], #42
-   [40, 1, Conv, [512, 3, 1, None, 1]], #43
+   [[-1, 19], 1, Concat, [1]],
+   [-1, 1, ELAN_t, [256, 1, 1, None, 1]],  # 35
+#
+   [29, 1, Conv, [128, 3, 1, None, 1]], #36
+   [32, 1, Conv, [256, 3, 1, None, 1]], #37
+   [35, 1, Conv, [512, 3, 1, None, 1]], #38
 
 #   [-1, 1, Classify, [nc]] # Classify
-   [[41,42,43], 1, Detect, [nc]] # Detect(P3, P4, P5)
-
+   [[36,37,38], 1, Detect, [nc]] # Detect(P3, P4, P5)
+#   [[11], 1, Detect, [nc]] # Detect(P3, P4, P5)
 #   [[26], 1, Segment, [nc, 32, 256]] # Detect(P3, P4, P5)
   ]
