--- a/ultralytics/cfg/models/v9-RGBT/yolov9m-RGBT-early-fusion.yaml
+++ b/ultralytics/cfg/models/v9-RGBT/yolov9m-RGBT-early-fusion.yaml
@@ -4,35 +4,37 @@
 
 # Parameters
 nc: 80 # number of classes
-
+ch: 4
 # GELAN backbone
 backbone:
-  - [-1, 1, Conv, [32, 3, 2]] # 0-P1/2
-  - [-1, 1, Conv, [64, 3, 2]] # 1-P2/4
-  - [-1, 1, RepNCSPELAN4, [128, 128, 64, 1]] # 2
-  - [-1, 1, AConv, [240]] # 3-P3/8
-  - [-1, 1, RepNCSPELAN4, [240, 240, 120, 1]] # 4
-  - [-1, 1, AConv, [360]] # 5-P4/16
-  - [-1, 1, RepNCSPELAN4, [360, 360, 180, 1]] # 6
-  - [-1, 1, AConv, [480]] # 7-P5/32
-  - [-1, 1, RepNCSPELAN4, [480, 480, 240, 1]] # 8
-  - [-1, 1, SPPELAN, [480, 240]] # 9
+  - [ -1, 1, Silence, [ ] ]  # 0-P1/2
+  - [ 0, 1, SilenceChannel, [ 0,4 ] ]  # 1-P1/2
+  - [-1, 1, Conv, [32, 3, 2]] # 2-P1/2
+  - [-1, 1, Conv, [64, 3, 2]] # 3-P2/4
+  - [-1, 1, RepNCSPELAN4, [128, 128, 64, 1]] # 4
+  - [-1, 1, AConv, [240]] # 5-P3/8
+  - [-1, 1, RepNCSPELAN4, [240, 240, 120, 1]] # 6
+  - [-1, 1, AConv, [360]] # 7-P4/16
+  - [-1, 1, RepNCSPELAN4, [360, 360, 180, 1]] # 8
+  - [-1, 1, AConv, [480]] # 9-P5/32
+  - [-1, 1, RepNCSPELAN4, [480, 480, 240, 1]] # 10
+  - [-1, 1, SPPELAN, [480, 240]] # 11
 
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
-  - [[-1, 6], 1, Concat, [1]] # cat backbone P4
-  - [-1, 1, RepNCSPELAN4, [360, 360, 180, 1]] # 12
+  - [[-1, 8], 1, Concat, [1]] # cat backbone P4
+  - [-1, 1, RepNCSPELAN4, [360, 360, 180, 1]] # 14
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
-  - [[-1, 4], 1, Concat, [1]] # cat backbone P3
-  - [-1, 1, RepNCSPELAN4, [240, 240, 120, 1]] # 15
+  - [[-1, 6], 1, Concat, [1]] # cat backbone P3
+  - [-1, 1, RepNCSPELAN4, [240, 240, 120, 1]] # 17
 
   - [-1, 1, AConv, [180]]
-  - [[-1, 12], 1, Concat, [1]] # cat head P4
-  - [-1, 1, RepNCSPELAN4, [360, 360, 180, 1]] # 18 (P4/16-medium)
+  - [[-1, 14], 1, Concat, [1]] # cat head P4
+  - [-1, 1, RepNCSPELAN4, [360, 360, 180, 1]] # 20 (P4/16-medium)
 
   - [-1, 1, AConv, [240]]
-  - [[-1, 9], 1, Concat, [1]] # cat head P5
-  - [-1, 1, RepNCSPELAN4, [480, 480, 240, 1]] # 21 (P5/32-large)
+  - [[-1, 11], 1, Concat, [1]] # cat head P5
+  - [-1, 1, RepNCSPELAN4, [480, 480, 240, 1]] # 23 (P5/32-large)
 
-  - [[15, 18, 21], 1, Detect, [nc]] # Detect(P3, P4, P5)
+  - [[17, 20, 23], 1, Detect, [nc]] # Detect(P3, P4, P5)
