--- a/ultralytics/cfg/models/v9-RGBT/yolov9m-RGBT-latefusion.yaml
+++ b/ultralytics/cfg/models/v9-RGBT/yolov9m-RGBT-latefusion.yaml
@@ -44,26 +44,35 @@ head:
   - [[-1, 6], 1, Concat, [1]] # cat backbone P3
   - [-1, 1, RepNCSPELAN4, [240, 240, 120, 1]] # 28
 
+  - [-1, 1, AConv, [180]]
+  - [[-1, 25], 1, Concat, [1]] # cat head P4
+  - [-1, 1, RepNCSPELAN4, [360, 360, 180, 1]] # 31 (P4/16-medium)
+
+  - [-1, 1, AConv, [240]]
+  - [[-1, 11], 1, Concat, [1]] # cat head P5
+  - [-1, 1, RepNCSPELAN4, [480, 480, 240, 1]] # 34 (P5/32-large)
+
+
   # infrared
   - [22, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 19], 1, Concat, [1]] # cat backbone P4
-  - [-1, 1, RepNCSPELAN4, [360, 360, 180, 1]] # 31
+  - [-1, 1, RepNCSPELAN4, [360, 360, 180, 1]] # 37
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 17], 1, Concat, [1]] # cat backbone P3
-  - [-1, 1, RepNCSPELAN4, [240, 240, 120, 1]] # 34
-
-  - [ [ 11, 22 ], 1, Concat, [ 1 ] ]  # cat head P5  35
-  - [ [ 27, 33 ], 1, Concat, [ 1 ] ]  # cat head P5  36
-  - [ [ 30, 36 ], 1, Concat, [ 1 ] ]  # cat head P5  37
-
+  - [-1, 1, RepNCSPELAN4, [240, 240, 120, 1]] # 40
 
   - [-1, 1, AConv, [180]]
   - [[-1, 36], 1, Concat, [1]] # cat head P4
-  - [-1, 1, RepNCSPELAN4, [360, 360, 180, 1]] # 40 (P4/16-medium)
+  - [-1, 1, RepNCSPELAN4, [360, 360, 180, 1]] # 43 (P4/16-medium)
 
   - [-1, 1, AConv, [240]]
   - [[-1, 35], 1, Concat, [1]] # cat head P5
-  - [-1, 1, RepNCSPELAN4, [480, 480, 240, 1]] # 43 (P5/32-large)
+  - [-1, 1, RepNCSPELAN4, [480, 480, 240, 1]] # 46 (P5/32-large)
 
-  - [[37, 40, 43], 1, Detect, [nc]] # Detect(P3, P4, P5)
+
+  - [ [ 28, 40 ], 1, Concat, [ 1 ] ]  # cat head P5  47
+  - [ [ 31, 43 ], 1, Concat, [ 1 ] ]  # cat head P5  48
+  - [ [ 34, 46 ], 1, Concat, [ 1 ] ]  # cat head P5  49
+
+  - [[47, 48, 49], 1, Detect, [nc]] # Detect(P3, P4 P5)
