OBB detect bug(#8) Solution: ultralytics/utils/plotting.py ：  1388 line   box   -->  box.cpu() if rotated:  p1 = [int(b) for b in box[0]]  cv2.polylines(image, [np.asarray(box.cpu(), dtype=int)], True, color, self.lw)

--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,4 @@ calibration_*.npy
 /train_RGBT_kaist_C.py
 #/transform_COCO_to_RGBT.py
 #/train_RGBT_kaist.py
+/ultralytics/cfg/datasets/dota8_MINE.yaml
