Fixed (#19) The structure diagrams of the new versions of yolo11-RGBT-latefusion.yaml and yolo11-RGBT-scorefusion.yaml have been changed to the same structure as the original YOLOv11. 修复(#19) 新版的yolo11-RGBT-latefusion.yaml和yolo11-RGBT-scorefusion.yaml结构图改为了和原版YOLOv11一样的结构

--- a/ultralytics/cfg/models/11-RGBT/yolo11-RGBT-latefusion.yaml
+++ b/ultralytics/cfg/models/11-RGBT/yolo11-RGBT-latefusion.yaml
@@ -59,7 +59,7 @@ head:
   - [-1, 2, C3k2, [256, False]] # 30 (P3/8-small)
 
   - [-1, 1, Conv, [256, 3, 2]]
-  - [[-1, 25], 1, Concat, [1]] # cat head P4
+  - [[-1, 27], 1, Concat, [1]] # cat head P4  (#19) 25->27
   - [-1, 2, C3k2, [512, False]] # 33 (P4/16-medium)
 
   - [-1, 1, Conv, [512, 3, 2]]
@@ -77,7 +77,7 @@ head:
   - [ -1, 2, C3k2, [ 256, False ] ] # 42 (P3/8-small)
 
   - [-1, 1, Conv, [256, 3, 2]]
-  - [[-1, 37], 1, Concat, [1]] # cat head P4
+  - [[-1, 39], 1, Concat, [1]] # cat head P4  (#19) 37->39
   - [-1, 2, C3k2, [512, False]] # 45 (P4/16-medium)
 
   - [-1, 1, Conv, [512, 3, 2]]
