(#21) Optimize file heatmap_RGBT.py | 优化文件 heatmap_RGBT.py 1.The generated heatmap can display bounding boxes now 2.The heatmap can be restricted/clipped within the bounding box area
1.生成的热力图可以显示标注框（bounding box）
2. 热力图可以限制在标注框内部显示

--- a/.gitignore
+++ b/.gitignore
@@ -145,7 +145,7 @@ dmypy.json
 runs/
 wandb/
 .DS_Store
-
+result3/
 # Neural Network weights -----------------------------------------------------------------------------------------------
 weights/
 *.weights
@@ -180,3 +180,4 @@ calibration_*.npy
 #/train_RGBT_kaist.py
 /ultralytics/cfg/datasets/dota8_MINE.yaml
 /val2.py
+/heatmap_RGBT_test.py
